--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 	"dependencies": {
 		"@fortawesome/free-regular-svg-icons": "^6.4.0",
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
-		"bcrypt": "^5.1.0",
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
 		"ip": "^2.0.0",
 		"mongodb": "^5.7.0",
 		"node-sass": "^9.0.0",
