--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/cookie": "^0.5.1",
 		"@types/ip": "^1.1.0",
+		"@types/node": "^20.11.29",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.3",
 		"sass": "^1.64.2",
@@ -33,7 +34,7 @@
 		"@fortawesome/free-regular-svg-icons": "^6.4.0",
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"bcryptjs": "^2.4.3",
-		"ip": "^2.0.0",
+		"ip": "^2.0.1",
 		"mongodb": "^5.7.0",
 		"node-sass": "^9.0.0",
 		"svelte-preprocess": "^5.0.4"
